--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,3 +1,3 @@
 <!DOCTYPE html> 
-<h1><%= @quote.inspect %></h1>
-<h2> <%= @quote%> </h2>
+<h1><%= @quote.saying %></h1>
+<h2>- <%= @quote.author%> </h2>
