--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<header>
+		<div class="col-xs-3">
+			LOGO
+		</div>
+		<div class="col-xs-4">
+			Hemingways unsolicted advice about writing, working and everything else.
+		</div>
+	</header>
+
+
 
 <%= yield %>
 
