--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,22 @@
 </head>
 <body>
 	<header>
-		<div class="col-xs-3">
+		<div class="row">
+			<div class="col-xs-3">
 			LOGO
-		</div>
-		<div class="col-xs-4">
-			Hemingways unsolicted advice about writing, working and everything else.
+			</div>
+			<div class="col-xs-4">
+			Hemingway's unsolicted advice about writing, working and everything else.
+			
+			</div>
+			<div class="col-xs-5">
+			<%= link_to 'Contribute', '#' %>
+			<%= link_to 'About', '#' %>
+			</div>
 		</div>
 	</header>
 
-
+<br class="clear" />
 
 <%= yield %>
 
