--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,26 @@
 	<header>
 		<div class="row">
 			<div class="col-xs-3">
-			LOGO
+				<div class="circle">
+  					<br />
+  					Words
+  					<br />
+  					By
+  					<br />
+  					Hemingway
+				</div>
 			</div>
-			<div class="col-xs-4">
+			<div class="col-xs-4 slogan">
 			Hemingway's unsolicted advice about writing, working and everything else.
 			
 			</div>
-			<div class="col-xs-5">
+			<div class="col-xs-5 links">
 			<%= link_to 'Contribute', '#' %>
 			<%= link_to 'About', '#' %>
 			</div>
 		</div>
 	</header>
+	<hr />
 
 <br class="clear" />
 
