--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,4 +1,5 @@
 
+
 .clear {
 	clear:both;
 }
@@ -39,6 +40,7 @@ padding-top: 26px;
 	color: black;
 	font-size: 25px;
 	border-bottom: 1px solid #dfdfdf;
+  font-family: '1942_report1942_report', sans-serif;
 }
 
 header {
@@ -48,4 +50,14 @@ header {
 
 hr {
 	clear:both;
+}
+
+h1 {
+  font-family: '1942_report1942_report', sans-serif;
+  font-weight: bold;
+  font-size: 48px;
+}
+
+h2 {
+  font-family: '1942_report1942_report', sans-serif;
 }
