--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,21 @@
 
 <br class="clear" />
 
+<div class="container">
 <%= yield %>
+</div>
+
+<div class="footer">
+    <div class="container">
+      <div class="col-xs-6">
+        <%= link_to "Give me more!", "#", :class => 'next-quote' %>
+      </div>
+      <div class="col-xs-6 footer-blurb">
+        Proudly hacked in San Francisco by <a href="http://jasonshueh.com">Jason Shueh<br />
+        Want to build your own Splurty Web App - <a href="http://thefirehoseproject.com">Learn how to code here</a>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
