--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,15 +22,45 @@
         <% end %>
 			</div>
 			<div class="col-xs-4 slogan">
-			Randome writing advice for writers, from writers
+			Random writing advice for writers, from writers.
 			
 			</div>
 			<div class="col-xs-5 links">
-			<%= link_to 'Contribute', new_quote_path %>
+      <!-- Button trigger modal -->
+      <%= link_to 'Contribute', '#', :data => {:toggle => 'modal', :target => '#myModal'} %>
 			<%= link_to 'About', about_path %>
 			</div>
 		</div>
 	</header>
+
+   
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel">Contribute Your Quote</h4>
+        </div>
+        <%= simple_form_for Quote.new do |f| %>
+        <div class="modal-body">
+          <%= f.input :saying %>
+          <%= f.input :author %>
+          <br />
+          <%= f.submit 'Create', :class => 'btn btn-danger' %>
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+
+
 	<hr />
 
 <br class="clear" />
