--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,11 @@
 				</div>
         <% end %>
 			</div>
-			<div class="col-xs-4 slogan">
+			<div class="col-xs-4 slogan hidden-xs">
 			Random writing advice for writers, from writers.
 			
 			</div>
-			<div class="col-xs-5 links">
+			<div class="col-xs-8 col-xs-offset-1 col-sm-offset-0 col-sm-5 links">
       <!-- Button trigger modal -->
       <%= link_to 'Contribute', '#', :data => {:toggle => 'modal', :target => '#myModal'} %>
 			<%= link_to 'About', about_path %>
@@ -45,8 +45,9 @@
         </div>
         <%= simple_form_for Quote.new do |f| %>
         <div class="modal-body">
-          <%= f.input :saying %>
-          <%= f.input :author %>
+          <%= f.input :saying, :label => "What is the saying you want to add?", :placeholder => "To be a writer, you have to dream while you are awake, intentionally." %>
+          <br />
+          <%= f.input :author, :label => "Who's the author of your quote?", :placeholder => "Haruki Murakami" %>
           <br />
           <%= f.submit 'Create', :class => 'btn btn-danger' %>
           
@@ -76,10 +77,10 @@
 
 <div class="footer">
     <div class="container">
-      <div class="col-xs-6">
+      <div class="col-xs-12 col-sm-6">
         <%= link_to "Give me more!", root_path, :class => 'next-quote' %>
       </div>
-      <div class="col-xs-6 footer-blurb">
+      <div class="col-xs-12 col-sm-6 footer-blurb">
         Proudly hacked in San Francisco by <a href="http://jasonshueh.com">Jason Shueh<br />
         Want to build your own Splurty Web App - <a href="http://thefirehoseproject.com">Learn how to code here</a>
       </div>
