--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,3 +1,14 @@
 <!DOCTYPE html> 
+<h2>
+  <span>SPLURTY / No. <%= @quote.id %></span>
+  <i>Here's some of the best unsolicited tips on writing <u>well!</u></i>
+</h2>
+<br/>
+
 <h1><%= @quote.saying %></h1>
-<h2>- <%= @quote.author%> </h2>
+<h2 class="pull-right">- <%= @quote.author %></h2>
+
+<br class="clear" />
+<br />
+<br />
+<br />
